syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "github.com/nicodanke/bankTutorial/pb";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string sessionId = 2;
    string accessToken = 3;
    string refreshToken = 4;
    google.protobuf.Timestamp accessTokenExpiresAt = 5;
    google.protobuf.Timestamp refreshTokenExpiresAt = 6;
}

